<resources>
    <string name="app_name">Login Kotlin</string>
    <string name="lb_login">Đăng nhập</string>
    <string name="lb_signup">Đăng ký</string>
    <string name="lb_email">Email</string>
    <string name="lb_password">Mật khẩu</string>
    <string name="lb_confirm_password">Nhập lại mật khẩu</string>
    <string name="lb_forget_password">Quên mật khẩu</string>
    <string name="lb_signup_question">Bạn không có tài khoản? Đăng ký ngay!</string>
    <string name="lb_welcome">Xin Chào</string>
    <string name="lb_title">Vui lòng chọn chức năng bên dưới</string>
    <string name="lb_signin_question">Bạn đã có tài khoản? Đăng nhập ngay!</string>
    <string name="announce_error_login"><b>Email</b> hoặc <b>Mật khẩu</b> không hợp lệ</string>
    <string name="lb_full_name">Nguyen Duc Thinh</string>
    <string name="lb_date_of_birth">10/09/2001</string>
    <string name="lb_add_short">Ha Noi City</string>
    <string name="lb_add_long">Dong Anh District,\nHa Noi City \nVietNam</string>
    <string name="lb_email_work">thinhnguyen10901@gmail.com</string>
    <string name="lb_add">Address</string>
    <string name="lb_header">Personal Info</string>
    <string name="lb_phone_work">0865301750</string>
    <string name="lb_phone">Mobile</string>

</resources>