<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1.5"
        android:src="@raw/image"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lb_welcome"
        android:textColor="#0d6e6a"
        android:textSize="45dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_title"
        android:textColor="#0d6e6a"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="openLogin"
        android:background="@drawable/custom_button"
        android:text="@string/lb_login"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:onClick="openRegister"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/lb_signup"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>