<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:src="@raw/image"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.03"
        android:text="@string/lb_login"
        android:textColor="#0d6e6a"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_forget"
        android:hint="@string/lb_email"
        android:paddingLeft="20dp"
        android:textColorHint="#8F129F9A"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_forget"
        android:hint="@string/lb_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColorHint="#8F129F9A"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:onClick="openDialogForgetPassword"
        android:text="@string/lb_forget_password"
        android:textColor="#0d6e6a"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_button"
        android:onClick="openProfile"
        android:text="@string/lb_login"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="openRegister"
        android:text="@string/lb_signup_question"
        android:textColor="#0d6e6a"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>