<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRAdius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="1dp"
                card_view:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_person"
                    card_view:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/lb_add"
                    android:textColor="#F8554A4A"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />


            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:src="@drawable/ic_home"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lb_add_short"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_add_long"
                    android:textAlignment="textStart"
                    android:textColor="#ED5E5E5E"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    card_view:ignore="RtlCompat" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>